# todo-app

./: LICENSE  Makefile  Makefile-bk  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  fix-everything.sh  libtool  mainwindow.c
.deps/: mainwindow.Po
autom4te.cache/: output.0  output.1  output.2  output.4  output.5  output.6  output.7  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
interface/: Makefile  Makefile-bk  Makefile.am  Makefile.in  consolewindow.c  consolewindow.h  consolewindow.lo  gtkwindow.c  gtkwindow.h  gtkwindow.lo  libinterface.la
interface/.deps/: consolewindow.Plo
model/: Makefile  Makefile.am  Makefile.in  filterdata.lo  libmodel.la
model/.deps/: fileworker.Plo
model/.libs/: libmodel.la
src/: Makefile  Makefile.am  Makefile.in  ToDo  mainwindow.c  todo-app
src/.deps/: todo_app-mainwindow.Po
src/interface/: Makefile  Makefile.am  Makefile.in  gtkwindow.c  gtkwindow.h  gtkwindow.h.gch  libinterface.la
src/interface/.deps/: gtkwindow.Plo  libinterface_la-consolewindow.Plo
src/interface/console/: consolewindow.c  consolewindow.h  libinterface_la-consolewindow.lo
src/interface/console/.deps/: libinterface_la-consolewindow.Plo
src/interface/gtk/: gtkwindow.c  gtkwindow.h
src/interface/mygtk/: gtkwindow.c  gtkwindow.h
src/model/: Makefile  Makefile-bk  Makefile.in  fileworker.c  fileworker.lo
src/model/.deps/: filterdata.Plo
src/resources/: Makefile  Makefile.am  Makefile.in  constants.h  libresources.la
